// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getSkeletonStyle() > should return correct css for opts: animationName 1`] = `
{
  "animation": "animationName 0.6s cubic-bezier(0.25,0.1,0.25,1) infinite",
  "background": "#EEEFF2 linear-gradient(to right, transparent 0%, #f7f7f7 25%, transparent 50%) 0 0 / 200% 100%",
  "borderRadius": "4px",
  "display": "block",
}
`;

exports[`getSkeletonStyle() > should return correct css for opts: animationName 2`] = `
{
  "animation": "animationName 0.6s cubic-bezier(0.25,0.1,0.25,1) infinite",
  "background": "#212225 linear-gradient(to right, transparent 0%, #1a1b1e 25%, transparent 50%) 0 0 / 200% 100%",
  "borderRadius": "4px",
  "display": "block",
}
`;

exports[`should return correct keyframes 1`] = `
{
  "from": {
    "backgroundPositionX": "100%",
  },
  "to": {
    "backgroundPositionX": "-100%",
  },
}
`;
